--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 ssh2 = "0.9.4"
 regex = "1.5.4"
+color-eyre = "0.6.2"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
