--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ regex = "1.5.4"
 color-eyre = "0.6.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+toml = "0.5.8"
