--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ color-eyre = "0.6.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 toml = "0.5.8"
+crossterm = "0.27.0"
+ratatui = "0.26.1"
